--- a/src/index.html
+++ b/src/index.html
@@ -55,44 +55,44 @@
     <div class="container">
     <div class="content">
 
-    <div class="row1">
+    <div class="row">
         <div class="zoom">
-            <div class="column1">
-                <p><img class="furniture1" src="images/1.jpg"></p>
+            <div class="column">
+                <p><img class="furniture" src="images/1.jpg"></p>
             </div>
         </div>
 
         <div class="zoom">
-            <div class="column1">
-                <p><img class="furniture2" src="images/2.jpg"></p>
+            <div class="column">
+                <p><img class="furniture" src="images/2.jpg"></p>
             </div>
         </div>
 
         <div class="zoom">
-            <div class="column1">
-                <p><img class="furniture3" src="images/3.jpg"></p>
+            <div class="column">
+                <p><img class="furniture" src="images/3.jpg"></p>
             </div>
         </div>
     </div>
 
 
-    <div class="row2">
+    <div class="row">
 
         <div class="zoom">
-            <div class="column2">
-                <p><img class="furniture4" src="images/4.jpg"></p>
+            <div class="column">
+                <p><img class="furniture" src="images/4.jpg"></p>
             </div>
         </div>
 
         <div class="zoom">
-            <div class="column2">
-                <p><img class="furniture5" src="images/5.jpg"></p>
+            <div class="column">
+                <p><img class="furniture" src="images/5.jpg"></p>
             </div>
         </div>
 
         <div class="zoom">
-            <div class="column2">
-                <p><img class="furniture6" src="images/6.jpg"></p>
+            <div class="column">
+                <p><img class="furniture" src="images/6.jpg"></p>
             </div>
         </div>
 
