add models and prices in table

--- a/src/index.html
+++ b/src/index.html
@@ -107,71 +107,77 @@
                 <table id="furniture" style="height: 400px">
                     <thead>
                     <tr>
-                        <th>Head 1</th>
-                        <th>Head 2</th>
-                        <th>Head 3</th>
-                        <th>Head 4</th>
-                        <th>Head 5</th>
+                        <th>Sofas</th>
+                        <th>Сhairs</th>
+                        <th>Сarpets</th>
+                        <th>Bedside tables</th>
+                        <th>Cabinets</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                        <td>Content 4</td>
-                        <td>Content 5</td>
-                    </tr>
-                    <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                        <td>Content 4</td>
-                        <td>Content 5</td>
-                    </tr>
-                    <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                        <td>Content 4</td>
-                        <td>Content 5</td>
-                    </tr>
-                    <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                        <td>Content 4</td>
-                        <td>Content 5</td>
+                        <td>Model 491, Red </td>
+                        <td>Model 329, Green </td>
+                        <td>Model 839, Yellow</td>
+                        <td>Model 913, Pink</td>
+                        <td>Model 934, Orange</td>
                     </tr>
 
                     <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                        <td>Content 4</td>
-                        <td>Content 5</td>
-                    </tr>
-                    <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                        <td>Content 4</td>
-                        <td>Content 5</td>
-                    </tr>
-                    <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                        <td>Content 4</td>
-                        <td>Content 5</td>
+                        <td>1423</td>
+                        <td>1532</td>
+                        <td>2314</td>
+                        <td>4312</td>
+                        <td>1234</td>
                     </tr>
 
                     <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                        <td>Content 4</td>
-                        <td>Content 5</td>
+                        <td>Model 391, Pink</td>
+                        <td>Model 931, Orange</td>
+                        <td>Model 934, Yellow</td>
+                        <td>Model 913, Green</td>
+                        <td>Model 931, Pink</td>
+                    </tr>
+
+                    <tr>
+                        <td>1532</td>
+                        <td>1265</td>
+                        <td>1642</td>
+                        <td>1786</td>
+                        <td>3753</td>
+                    </tr>
+
+
+                    <tr>
+                        <td>Model 823, Pink</td>
+                        <td>Model 821, Red</td>
+                        <td>Model 923, Yellow</td>
+                        <td>Model 314, Orange</td>
+                        <td>Model 412, Yellow</td>
+                    </tr>
+
+                    <tr>
+                        <td>5321</td>
+                        <td>3215</td>
+                        <td>2314</td>
+                        <td>5435</td>
+                        <td>1342</td>
+                    </tr>
+
+                    <tr>
+                        <td>Model 021, Orange</td>
+                        <td>Model 312, Blue</td>
+                        <td>Model 718, Black</td>
+                        <td>Model 012, White</td>
+                        <td>Model 014, Orange</td>
+                    </tr>
+
+                    <tr>
+                        <td>3241</td>
+                        <td>1242</td>
+                        <td>5432</td>
+                        <td>1245</td>
+                        <td>3245</td>
                     </tr>
                     </tbody>
                 </table>
