--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
     <title>bedroom</title>
 </head>
-<body class="body">
-    <header class="header">
+<body>
+    <header>
         <div class="container">
             <div class="header_inner">
                 <div class="header__logo">MoGo</div>
-                <nav class="nav">
+                <nav>
                      <a class="nav__link" href="#">About</a>
                      <a class="nav__link" href="#">Service</a>
                      <a class="nav__link" href="#">Work</a>
@@ -25,162 +25,163 @@
         </div>
     </header>
     <main>
-    </main>
-    <div class="intro">
-        <div class="container">
-            <div class="intro__inner">
-                <h2 class="intro__subtitle">Furniture for everyone</h2>
-                <h1 class="intro__title" data-text="Welcome to MoGo">Welcome to MoGo</h1>
-            </div>
-        </div>
-    </div>
-    <div class="sidenav">
-        <div class="container">
-            <a href="listOfHtmls/Main.html">Main</a>
-            <a href="listOfHtmls/Progress.html">Progress</a>
-            <a href="listOfHtmls/Contacts.html">Contacts</a>
-            <a href="listOfHtmls/FAQ.html">FAQ</a>
-        </div>
-    </div>
-    <div class="content">
-        <div class="container">
-            <div class="row">
-                <div class="zoom">
-                    <div class="column">
-                        <p><img class="furniture" src="images/1.jpg"></p>
-                    </div>
-                </div>
-                <div class="zoom">
-                    <div class="column">
-                        <p><img class="furniture" src="images/2.jpg"></p>
-                    </div>
-                </div>
-                <div class="zoom">
-                    <div class="column">
-                        <p><img class="furniture" src="images/3.jpg"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="zoom">
-                    <div class="column">
-                        <p><img class="furniture" src="images/4.jpg"></p>
-                    </div>
-                </div>
-                <div class="zoom">
-                    <div class="column">
-                        <p><img class="furniture" src="images/5.jpg"></p>
-                    </div>
-                </div>
-                <div class="zoom">
-                    <div class="column">
-                        <p><img class="furniture" src="images/6.jpg"></p>
-                    </div>
-                </div>
-            </div>
-        <div class="table_furniture">
+        <div class="intro">
             <div class="container">
-                <div style="height: 500px; overflow: auto">
-                    <table id="furniture" style="height: 400px">
-                        <thead>
-                            <tr>
-                                <th>Sofas</th>
-                                <th>Сhairs</th>
-                                <th>Сarpets</th>
-                                <th>Bedside tables</th>
-                                <th>Cabinets</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Model 491, Red </td>
-                                <td>Model 329, Green </td>
-                                <td>Model 839, Yellow</td>
-                                <td>Model 913, Pink</td>
-                                <td>Model 934, Orange</td>
-                            </tr>
-                            <tr>
-                                <td>1423</td>
-                                <td>1532</td>
-                                <td>2314</td>
-                                <td>4312</td>
-                                <td>1234</td>
-                            </tr>
-                            <tr>
-                                <td>Model 391, Pink</td>
-                                <td>Model 931, Orange</td>
-                                <td>Model 934, Yellow</td>
-                                <td>Model 913, Green</td>
-                                <td>Model 931, Pink</td>
-                            </tr>
-                            <tr>
-                                <td>1532</td>
-                                <td>1265</td>
-                                <td>1642</td>
-                                <td>1786</td>
-                                <td>3753</td>
-                            </tr>
-                            <tr>
-                                <td>Model 823, Pink</td>
-                                <td>Model 821, Red</td>
-                                <td>Model 923, Yellow</td>
-                                <td>Model 314, Orange</td>
-                                <td>Model 412, Yellow</td>
-                            </tr>
-                            <tr>
-                                <td>5321</td>
-                                <td>3215</td>
-                                <td>2314</td>
-                                <td>5435</td>
-                                <td>1342</td>
-                            </tr>
-                            <tr>
-                                <td>Model 021, Orange</td>
-                                <td>Model 312, Blue</td>
-                                <td>Model 718, Black</td>
-                                <td>Model 012, White</td>
-                                <td>Model 014, Orange</td>
-                            </tr>
-                            <tr>
-                                <td>3241</td>
-                                <td>1242</td>
-                                <td>5432</td>
-                                <td>1245</td>
-                                <td>3245</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="intro__inner">
+                    <h2 class="intro__subtitle">Furniture for everyone</h2>
+                    <h1 class="intro__title" data-text="Welcome to MoGo">Welcome to MoGo</h1>
                 </div>
-                <div class="text_furniture">
-                    <div class="container">
-                        <div style="height: 700px; overflow: auto">
-                            <h2>A little information about Ikea</h2>
-                            <h4>IKEA, home furnishings retailer that was the world’s largest seller of furniture in the early 21st century, operating more than 300 stores around the world. IKEA specializes in low-priced goods, sold whenever possible in compact “flat-pack” form for in-home assembly by the customer. IKEA was founded (1943) in Sweden and still flaunts its origins—store exteriors are decorated in the colours of the Swedish flag (blue and yellow), in-store restaurants serve Swedish food, and the company’s products carry Swedish names—but its headquarters are now in the Netherlands.
-                                IKEA founder Ingvar Kamprad, whose paternal grandparents were German-speaking immigrants to the Småland province of southern Sweden, was a precocious trader. In 1943, at age 17, he started the company, putting together its name from his own initials and the initial letters of his family’s farm (Elmtaryd) and his home village (Agunnaryd). At first he sold miscellaneous small articles such as pens and lighters. In 1948 he began selling furniture, and in 1951 he published the first annual IKEA catalogue. In 1953, in the town of Älmhult, he opened a showroom where customers looked at displays and placed orders. The first retail store opened in Älmhult in 1958.
-                                Flat-packing of furniture, introduced in 1956, was a key factor in reducing the company’s costs and enabling it to cut prices. During the late 1950s, IKEA’s unhappy competitors pressured Swedish manufacturers to cut off supplies to the company. IKEA responded by undertaking its own design work and by contracting with foreign suppliers, at first in Denmark and Poland. Later the company set up a manufacturing subsidiary, called Swedwood.
-                            </h4>
+            </div>
+        </div>
+        <div class="sidenav">
+            <div class="container">
+                <a href="listOfHtmls/Main.html">Main</a>
+                <a href="listOfHtmls/Progress.html">Progress</a>
+                <a href="listOfHtmls/Contacts.html">Contacts</a>
+                <a href="listOfHtmls/FAQ.html">FAQ</a>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div class="row">
+                    <div class="zoom">
+                        <div class="column">
+                            <p><img class="furniture" src="images/1.jpg"></p>
+                        </div>
+                    </div>
+                    <div class="zoom">
+                        <div class="column">
+                            <p><img class="furniture" src="images/2.jpg"></p>
+                        </div>
+                    </div>
+                    <div class="zoom">
+                        <div class="column">
+                            <p><img class="furniture" src="images/3.jpg"></p>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="footer">
-                <ul class="listInColumns">
-                    <li class="Title">Працівник</li>
-                    <li>Директор компанії</li>
-                    <li>Заступник директора</li>
-                    <li>Засновник компанії</li>
-                    <li class="Title">Меблі</li>
-                    <li>Дивани</li>
-                    <li>Крісла</li>
-                    <li>Столи</li>
-                    <li class="Title">Контактні данні</li>
-                    <li>Телеграм</li>
-                    <li>Телефон</li>
-                    <li>Пошта</li>
-                    <li>Чат у ватсат</li>
-                </ul>
+                <div class="row">
+                    <div class="zoom">
+                        <div class="column">
+                            <p><img class="furniture" src="images/4.jpg"></p>
+                        </div>
+                    </div>
+                    <div class="zoom">
+                        <div class="column">
+                            <p><img class="furniture" src="images/5.jpg"></p>
+                        </div>
+                    </div>
+                    <div class="zoom">
+                        <div class="column">
+                            <p><img class="furniture" src="images/6.jpg"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="table_furniture">
+                    <div class="container">
+                        <div style="height: 500px; overflow: auto">
+                            <table id="furniture" style="height: 400px">
+                                <thead>
+                                <tr>
+                                    <th>Sofas</th>
+                                    <th>Сhairs</th>
+                                    <th>Сarpets</th>
+                                    <th>Bedside tables</th>
+                                    <th>Cabinets</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>Model 491, Red </td>
+                                    <td>Model 329, Green </td>
+                                    <td>Model 839, Yellow</td>
+                                    <td>Model 913, Pink</td>
+                                    <td>Model 934, Orange</td>
+                                </tr>
+                                <tr>
+                                    <td>1423</td>
+                                    <td>1532</td>
+                                    <td>2314</td>
+                                    <td>4312</td>
+                                    <td>1234</td>
+                                </tr>
+                                <tr>
+                                    <td>Model 391, Pink</td>
+                                    <td>Model 931, Orange</td>
+                                    <td>Model 934, Yellow</td>
+                                    <td>Model 913, Green</td>
+                                    <td>Model 931, Pink</td>
+                                </tr>
+                                <tr>
+                                    <td>1532</td>
+                                    <td>1265</td>
+                                    <td>1642</td>
+                                    <td>1786</td>
+                                    <td>3753</td>
+                                </tr>
+                                <tr>
+                                    <td>Model 823, Pink</td>
+                                    <td>Model 821, Red</td>
+                                    <td>Model 923, Yellow</td>
+                                    <td>Model 314, Orange</td>
+                                    <td>Model 412, Yellow</td>
+                                </tr>
+                                <tr>
+                                    <td>5321</td>
+                                    <td>3215</td>
+                                    <td>2314</td>
+                                    <td>5435</td>
+                                    <td>1342</td>
+                                </tr>
+                                <tr>
+                                    <td>Model 021, Orange</td>
+                                    <td>Model 312, Blue</td>
+                                    <td>Model 718, Black</td>
+                                    <td>Model 012, White</td>
+                                    <td>Model 014, Orange</td>
+                                </tr>
+                                <tr>
+                                    <td>3241</td>
+                                    <td>1242</td>
+                                    <td>5432</td>
+                                    <td>1245</td>
+                                    <td>3245</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="text_furniture">
+                            <div class="container">
+                                <div style="height: 700px; overflow: auto">
+                                    <h2>A little information about Ikea</h2>
+                                    <h4>IKEA, home furnishings retailer that was the world’s largest seller of furniture in the early 21st century, operating more than 300 stores around the world. IKEA specializes in low-priced goods, sold whenever possible in compact “flat-pack” form for in-home assembly by the customer. IKEA was founded (1943) in Sweden and still flaunts its origins—store exteriors are decorated in the colours of the Swedish flag (blue and yellow), in-store restaurants serve Swedish food, and the company’s products carry Swedish names—but its headquarters are now in the Netherlands.
+                                        IKEA founder Ingvar Kamprad, whose paternal grandparents were German-speaking immigrants to the Småland province of southern Sweden, was a precocious trader. In 1943, at age 17, he started the company, putting together its name from his own initials and the initial letters of his family’s farm (Elmtaryd) and his home village (Agunnaryd). At first he sold miscellaneous small articles such as pens and lighters. In 1948 he began selling furniture, and in 1951 he published the first annual IKEA catalogue. In 1953, in the town of Älmhult, he opened a showroom where customers looked at displays and placed orders. The first retail store opened in Älmhult in 1958.
+                                        Flat-packing of furniture, introduced in 1956, was a key factor in reducing the company’s costs and enabling it to cut prices. During the late 1950s, IKEA’s unhappy competitors pressured Swedish manufacturers to cut off supplies to the company. IKEA responded by undertaking its own design work and by contracting with foreign suppliers, at first in Denmark and Poland. Later the company set up a manufacturing subsidiary, called Swedwood.
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer">
+                        <ul class="listInColumns">
+                            <li class="Title">Працівник</li>
+                            <li>Директор компанії</li>
+                            <li>Заступник директора</li>
+                            <li>Засновник компанії</li>
+                            <li class="Title">Меблі</li>
+                            <li>Дивани</li>
+                            <li>Крісла</li>
+                            <li>Столи</li>
+                            <li class="Title">Контактні данні</li>
+                            <li>Телеграм</li>
+                            <li>Телефон</li>
+                            <li>Пошта</li>
+                            <li>Чат у ватсат</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
