--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
     <title>bedroom</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
     <div class="page-wrapper">
@@ -163,24 +164,25 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="footer">
-                            <ul class="listInColumns">
-                                <li class="Title">Працівник</li>
-                                <li>Директор компанії</li>
-                                <li>Заступник директора</li>
-                                <li>Засновник компанії</li>
-                                <li class="Title">Меблі</li>
-                                <li>Дивани</li>
-                                <li>Крісла</li>
-                                <li>Столи</li>
-                                <li class="Title">Контактні данні</li>
-                                <li>Телеграм</li>
-                                <li>Телефон</li>
-                                <li>Пошта</li>
-                                <li>Чат у ватсат</li>
-                            </ul>
-                        </div>
                     </div>
+                    <div class="footer">
+                        <ul class="listInColumns">
+                            <li class="Title">Працівник</li>
+                            <li>Директор компанії</li>
+                            <li>Заступник директора</li>
+                            <li>Засновник компанії</li>
+                            <li class="Title">Меблі</li>
+                            <li>Дивани</li>
+                            <li>Крісла</li>
+                            <li>Столи</li>
+                            <li class="Title">Контактні данні</li>
+                            <li><a class=nav__link href="https://t.me/Tanasienko"><i class="fa-brands fa-telegram"></i> Телеграм</a></li>
+                            <li><a class=nav__link href="skype:0678134309"><i class="fa-solid fa-phone"></i> Телефон</a></li>
+                            <li><a class=nav__link href="mailto:ia13anastasiatanasienko@gmail.com"><i class="fa-solid fa-envelope"></i> Пошта</a></li>
+                            <li><a class=nav__link href="https://www.whatsapp.com/?lang=ru"> <i class="fa-brands fa-whatsapp"></i> Чат у ватсап</a></li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
         </main>
