Use flex for pictures

--- a/src/index.html
+++ b/src/index.html
@@ -46,38 +46,12 @@
             <div class="content">
                 <div class="container">
                     <div class="row">
-                        <div class="zoom">
-                            <div class="column">
-                                <p><img class="furniture" src="images/1.jpg"></p>
-                            </div>
-                        </div>
-                        <div class="zoom">
-                            <div class="column">
-                                <p><img class="furniture" src="images/2.jpg"></p>
-                            </div>
-                        </div>
-                        <div class="zoom">
-                            <div class="column">
-                                <p><img class="furniture" src="images/3.jpg"></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="zoom">
-                            <div class="column">
-                                <p><img class="furniture" src="images/4.jpg"></p>
-                            </div>
-                        </div>
-                        <div class="zoom">
-                            <div class="column">
-                                <p><img class="furniture" src="images/5.jpg"></p>
-                            </div>
-                        </div>
-                        <div class="zoom">
-                            <div class="column">
-                                <p><img class="furniture" src="images/6.jpg"></p>
-                            </div>
-                        </div>
+                        <img class="furniture" src="images/1.jpg">
+                        <img class="furniture" src="images/2.jpg">
+                        <img class="furniture" src="images/3.jpg">
+                        <img class="furniture" src="images/4.jpg">
+                        <img class="furniture" src="images/5.jpg">
+                        <img class="furniture" src="images/6.jpg">
                     </div>
                     <div class="table_furniture">
                         <div class="container">
